--- a/FRAProject/Areas/Administration/Views/Section/AddSection.cshtml
+++ b/FRAProject/Areas/Administration/Views/Section/AddSection.cshtml
@@ -5,7 +5,7 @@
     @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Add Section" })
 
     <div class="modal-body userModalForm">
-        <!-- Begin Category input -->
+        <!-- Begin Section input -->
         <div class="form">
 
             <div class="form-group row">
@@ -28,7 +28,7 @@
             </div>
 
         </div>
-        <!-- End Category input -->
+        <!-- End Section input -->
     </div>
 
 </form>
