--- a/FRAProject/Areas/Administration/Views/Section/Index.cshtml
+++ b/FRAProject/Areas/Administration/Views/Section/Index.cshtml
@@ -111,7 +111,7 @@
                                 <i class="fa fa-book"></i>
                                 <span>Templates</span>
                             </a>
-                            <div class="sidebar-submenu">
+                            <div class="sidebar-submenu" style="display: block;">
                                 <ul>
                                     <li>
                                         <a asp-area="administration" asp-controller="Category" asp-action="Index">Category</a>
@@ -120,7 +120,7 @@
                                         <a asp-area="administration" asp-controller="Section" asp-action="Index">Category</a>
                                     </li>
                                     <li>
-                                        <a href="#">Risk</a>
+                                        <a asp-area="administration" asp-controller="RiskSetting" asp-action="Index">Risk</a>
                                     </li>
                                 </ul>
                             </div>
