--- a/FRAProject/Views/Home/Index.cshtml
+++ b/FRAProject/Views/Home/Index.cshtml
@@ -115,7 +115,7 @@
                                         <a asp-area="administration" asp-controller="Section" asp-action="Index">Section</a>
                                     </li>
                                     <li>
-                                        <a href="#">Risk</a>
+                                        <a asp-area="administration" asp-controller="RiskSetting" asp-action="Index">Risk</a>                                        
                                     </li>
                                 </ul>
                             </div>
